namespace visitor
{
    public enum Color
    {
        RED,
        GREEN,
        BLUE
    }
}